# datasea

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in  data.ds  data.gd  output.sql  test.sql
data/us/: city.txt  company.txt  department.txt  first_name.txt  job_title.txt  last_name.txt  street_name.txt
examples/: basic.ds  complete_user_table.ds  functions.ds  gen_types.ds  variables.ds
include/: column.h  common.h  expr.h  generator.h  interpret_error.h  interpreter.h  parse_error.h  parser.h  scanner.h  stmnt.h  token.h
src/: column.cc  datasea.cc  datasea.h  environment.cc  environment.h  expr.cc  expr.h  generator.cc  interpreter.cc  interpreter.h  main.cc  parse_error.h  parser.cc  parser.h  scanner.cc  scanner.h  stmnt.cc  token.cc  token.h  value.cc  value.h
tests/: unit_tests.cc
